# tinymatrix

./: LICENSE  README.md  main.py  pyproject.toml
tests/: test_matrix.py
tinymatrix/: __init__.py  exceptions.py  matrix.py  types.py
